--- a/styles/skewed-header.css
+++ b/styles/skewed-header.css
@@ -34,7 +34,7 @@
 }
 
 .skewed-header > .skewed-header-wrapper > .skewed-header-content > .heading-wrapper {
-	background-color: #cea135;
+	background-color: #ffde59;
 	color: #11122b;
 	border-bottom-left-radius: 2px;
 	border-bottom-right-radius: 2px;
